{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 239,
  "lineage": "d94662df-727d-2dbd-7e8d-fe60950e0b1f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "aws-tf-web-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0992fc94ca0f1415a",
            "arn": "arn:aws:ec2:ap-northeast-1:023712399317:instance/i-0fdc7700a4b2b9306",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-09419c3447430a20d",
                "throughput": 0,
                "volume_id": "vol-0f504753eb56e94de",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fdc7700a4b2b9306",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-049ab44ee1bf5b801",
            "private_dns": "ip-10-0-10-173.ap-northeast-1.compute.internal",
            "private_ip": "10.0.10.173",
            "public_dns": "ec2-3-113-2-69.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "3.113.2.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f504753eb56e94de",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a4842700821fe6b8",
            "tags": {
              "Name": "aws-tf-web-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0318fd8de9f752bdf"
            ]
          },
          "dependencies": [
            "aws_key_pair.auth",
            "aws_security_group.aws-tf-public-security-group",
            "aws_subnet.aws-tf-public-subnet-1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "aws-tf-web-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0992fc94ca0f1415a",
            "arn": "arn:aws:ec2:ap-northeast-1:023712399317:instance/i-0ac6589da90676c00",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-09419c3447430a20d",
                "throughput": 0,
                "volume_id": "vol-0b23375f5e8852d21",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ac6589da90676c00",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05bff17a11e5b6b74",
            "private_dns": "ip-10-0-11-70.ap-northeast-1.compute.internal",
            "private_ip": "10.0.11.70",
            "public_dns": "ec2-18-183-123-13.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.183.123.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b23375f5e8852d21",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce3b6d1bb2409944",
            "tags": {
              "Name": "aws-tf-web-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0318fd8de9f752bdf"
            ]
          },
          "dependencies": [
            "aws_key_pair.auth",
            "aws_security_group.aws-tf-public-security-group",
            "aws_subnet.aws-tf-public-subnet-1c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws-tf-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:023712399317:internet-gateway/igw-078f85576f41356bc",
            "id": "igw-078f85576f41356bc",
            "owner_id": "023712399317",
            "tags": {
              "Name": "aws-tf-igw"
            },
            "vpc_id": "vpc-0d0be882ec8a5734a"
          },
          "dependencies": [
            "aws_vpc.aws-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "aws-tf-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:023712399317:loadbalancer/app/aws-tf-alb/6dda0eeda4f78618",
            "arn_suffix": "app/aws-tf-alb/6dda0eeda4f78618",
            "dns_name": "aws-tf-alb-426602540.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:023712399317:loadbalancer/app/aws-tf-alb/6dda0eeda4f78618",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "aws-tf-alb",
            "security_groups": [
              "sg-0984c0239133afb74"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a4842700821fe6b8"
              },
              {
                "subnet_id": "subnet-0ce3b6d1bb2409944"
              }
            ],
            "subnets": [
              "subnet-0a4842700821fe6b8",
              "subnet-0ce3b6d1bb2409944"
            ],
            "vpc_id": "vpc-0d0be882ec8a5734a",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.aws-tf-alb-security-group",
            "aws_subnet.aws-tf-public-subnet-1a",
            "aws_subnet.aws-tf-public-subnet-1c",
            "aws_vpc.aws-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "aws-tf-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:023712399317:listener/app/aws-tf-alb/6dda0eeda4f78618/755fafd76ce77ee2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:023712399317:targetgroup/aws-tf-alb-target-group/82e0e86b29fdaae0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:023712399317:listener/app/aws-tf-alb/6dda0eeda4f78618/755fafd76ce77ee2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:023712399317:loadbalancer/app/aws-tf-alb/6dda0eeda4f78618",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.aws-tf-alb",
            "aws_lb_target_group.aws-tf-alb-target-group",
            "aws_security_group.aws-tf-alb-security-group",
            "aws_subnet.aws-tf-public-subnet-1a",
            "aws_subnet.aws-tf-public-subnet-1c",
            "aws_vpc.aws-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "aws-tf-alb-listener-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:023712399317:targetgroup/aws-tf-alb-target-group/82e0e86b29fdaae0",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:023712399317:listener-rule/app/aws-tf-alb/6dda0eeda4f78618/755fafd76ce77ee2/b37fc71fe476827b",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:023712399317:listener-rule/app/aws-tf-alb/6dda0eeda4f78618/755fafd76ce77ee2/b37fc71fe476827b",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:023712399317:listener/app/aws-tf-alb/6dda0eeda4f78618/755fafd76ce77ee2",
            "priority": 99
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.aws-tf-alb",
            "aws_lb_listener.aws-tf-alb-listener",
            "aws_lb_target_group.aws-tf-alb-target-group",
            "aws_security_group.aws-tf-alb-security-group",
            "aws_subnet.aws-tf-public-subnet-1a",
            "aws_subnet.aws-tf-public-subnet-1c",
            "aws_vpc.aws-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "aws-tf-alb-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:023712399317:targetgroup/aws-tf-alb-target-group/82e0e86b29fdaae0",
            "arn_suffix": "targetgroup/aws-tf-alb-target-group/82e0e86b29fdaae0",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:023712399317:targetgroup/aws-tf-alb-target-group/82e0e86b29fdaae0",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "aws-tf-alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d0be882ec8a5734a"
          },
          "dependencies": [
            "aws_vpc.aws-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "aws-tf-alb-tg-attachment-web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:023712399317:targetgroup/aws-tf-alb-target-group/82e0e86b29fdaae0-20210130064131772100000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:023712399317:targetgroup/aws-tf-alb-target-group/82e0e86b29fdaae0",
            "target_id": "i-0fdc7700a4b2b9306"
          },
          "dependencies": [
            "aws_instance.aws-tf-web-1",
            "aws_key_pair.auth",
            "aws_lb_target_group.aws-tf-alb-target-group",
            "aws_security_group.aws-tf-public-security-group",
            "aws_subnet.aws-tf-public-subnet-1a",
            "aws_vpc.aws-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "aws-tf-alb-tg-attachment-web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:023712399317:targetgroup/aws-tf-alb-target-group/82e0e86b29fdaae0-20210130064110826900000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:023712399317:targetgroup/aws-tf-alb-target-group/82e0e86b29fdaae0",
            "target_id": "i-0ac6589da90676c00"
          },
          "dependencies": [
            "aws_instance.aws-tf-web-2",
            "aws_key_pair.auth",
            "aws_lb_target_group.aws-tf-alb-target-group",
            "aws_security_group.aws-tf-public-security-group",
            "aws_subnet.aws-tf-public-subnet-1c",
            "aws_vpc.aws-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aws-tf-public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0291a04d095c975fb",
            "owner_id": "023712399317",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-078f85576f41356bc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws-tf-public-route"
            },
            "vpc_id": "vpc-0d0be882ec8a5734a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.aws-tf-igw",
            "aws_vpc.aws-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aws-tf-public-subnet-association-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002ca0c38300bd446",
            "route_table_id": "rtb-0291a04d095c975fb",
            "subnet_id": "subnet-0a4842700821fe6b8"
          },
          "dependencies": [
            "aws_route_table.aws-tf-public-route",
            "aws_subnet.aws-tf-public-subnet-1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aws-tf-public-subnet-association-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0259c2d79fd1c4a06",
            "route_table_id": "rtb-0291a04d095c975fb",
            "subnet_id": "subnet-0ce3b6d1bb2409944"
          },
          "dependencies": [
            "aws_internet_gateway.aws-tf-igw",
            "aws_route_table.aws-tf-public-route",
            "aws_subnet.aws-tf-public-subnet-1c",
            "aws_vpc.aws-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-tf-alb-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:023712399317:security-group/sg-0984c0239133afb74",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0984c0239133afb74",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "aws-tf-alb-security-group",
            "name_prefix": "",
            "owner_id": "023712399317",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0d0be882ec8a5734a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-tf-private-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:023712399317:security-group/sg-00558627d0a6aff91",
            "description": "aws-tf-private-security-group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00558627d0a6aff91",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20210129190506483200000001",
            "name_prefix": "",
            "owner_id": "023712399317",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-tf-private-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0be882ec8a5734a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-tf-public-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:023712399317:security-group/sg-0318fd8de9f752bdf",
            "description": "aws-tf-public-security-group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0318fd8de9f752bdf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210129190506483500000002",
            "name_prefix": "",
            "owner_id": "023712399317",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-tf-public-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0be882ec8a5734a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2756256803",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0318fd8de9f752bdf",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws-tf-public-security-group",
            "aws_vpc.aws-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-3911890089",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00558627d0a6aff91",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws-tf-private-security-group",
            "aws_vpc.aws-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-314800534",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0318fd8de9f752bdf",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws-tf-public-security-group",
            "aws_vpc.aws-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_all-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3922921121",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00558627d0a6aff91",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws-tf-private-security-group",
            "aws_vpc.aws-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_all-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3929084508",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0318fd8de9f752bdf",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws-tf-public-security-group",
            "aws_vpc.aws-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws-tf-private-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:023712399317:subnet/subnet-0faf643fbf4a0fa6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-0faf643fbf4a0fa6f",
            "map_public_ip_on_launch": false,
            "owner_id": "023712399317",
            "tags": {
              "Name": "aws-tf-private-subnet-1a"
            },
            "vpc_id": "vpc-0d0be882ec8a5734a"
          },
          "dependencies": [
            "aws_vpc.aws-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws-tf-private-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:023712399317:subnet/subnet-0f8dab605fcc26416",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.21.0/24",
            "id": "subnet-0f8dab605fcc26416",
            "map_public_ip_on_launch": false,
            "owner_id": "023712399317",
            "tags": {
              "Name": "aws-tf-private-subnet-1c"
            },
            "vpc_id": "vpc-0d0be882ec8a5734a"
          },
          "dependencies": [
            "aws_vpc.aws-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws-tf-public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:023712399317:subnet/subnet-0a4842700821fe6b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0a4842700821fe6b8",
            "map_public_ip_on_launch": false,
            "owner_id": "023712399317",
            "tags": {
              "Name": "aws-tf-public-subnet-1a"
            },
            "vpc_id": "vpc-0d0be882ec8a5734a"
          },
          "dependencies": [
            "aws_vpc.aws-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws-tf-public-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:023712399317:subnet/subnet-0ce3b6d1bb2409944",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-0ce3b6d1bb2409944",
            "map_public_ip_on_launch": false,
            "owner_id": "023712399317",
            "tags": {
              "Name": "aws-tf-public-subnet-1c"
            },
            "vpc_id": "vpc-0d0be882ec8a5734a"
          },
          "dependencies": [
            "aws_vpc.aws-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws-tf-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:023712399317:vpc/vpc-0d0be882ec8a5734a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01b9e85864ab4ca3d",
            "default_route_table_id": "rtb-05fe6a2c9c8888880",
            "default_security_group_id": "sg-0418fd6a2470bfa49",
            "dhcp_options_id": "dopt-088c856f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d0be882ec8a5734a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05fe6a2c9c8888880",
            "owner_id": "023712399317",
            "tags": {
              "Name": "aws-tf-vpc"
            }
          }
        }
      ]
    }
  ]
}